--- a/css/styles.css
+++ b/css/styles.css
@@ -80,7 +80,7 @@ button {
   padding-left: 15px;
   padding-right: 15px;
   max-width: 318px;
-  margin: 0 uato;
+  margin: 0 auto;
 }
 
 @media screen and (min-width: 768px) {
@@ -97,199 +97,258 @@ button {
 
 /* header mobile */
 
-.navigation-list,
-.contacts {
-  display: none;
+@media screen {
+  .navigation-list,
+  .contacts {
+    display: none;
+  }
+
+  .page-header {
+    padding-top: 16px;
+    padding-bottom: 16px;
+    border-bottom: 1px solid #e7e9fc;
+    box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08),
+      0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
+  }
+
+  .header-wraper {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  .logo {
+    font-family: 'Raleway', sans-serif;
+    font-weight: 700;
+    text-transform: uppercase;
+    color: var(--blue);
+    font-size: 18px;
+    text-decoration: none;
+    line-height: 1.17;
+    letter-spacing: 0.03em;
+  }
+
+  .logo-accent {
+    color: var(--dark-blue);
+  }
 }
 
-.header-wraper {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
+@media screen and (max-width: 767px) {
+
+  .header-btn {
+    padding: 0;
+    line-height: 0;
+    stroke: #2f2f37;
+    fill: #2f2f37;
+    transition: stroke var(--main-transition), fill var(--main-transition);
+  }
+
+  .header-btn:hover,
+  .header-btn:focus {
+    stroke: var(--blue);
+    fill: var(--blue);
+  }
+
+  .mobile-menu-close-btn {
+    position: absolute;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    top: 24px;
+    right: 24px;
+    width: 24px;
+    height: 24px;
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    border-radius: 50%;
+    background-color: transparent;
+    cursor: pointer;
+    padding: 0;
+    transition: background-color var(--main-transition),
+      border var(--main-transition);
+  }
+
+  .mobile-menu-close-btn:hover,
+  .mobile-menu-close-btn:focus .close-modal-btn-icon {
+    fill: var(--white);
+  }
+
+  .mobile-menu-btn-icon {
+    transition: fill var(--main-transition);
+  }
+
+  .mobile-menu-close-btn:hover,
+  .mobile-menu-close-btn:focus {
+    background-color: var(--dark-light-blue);
+    border: none;
+  }
+
+  .mobile-menu {
+    position: fixed;
+    padding: 72px 24px 40px 16px;
+    top: 0;
+    left: 0;
+    z-index: 999;
+    width: 100%;
+    height: 100%;
+    transform: translateX(100%);
+    background-color: var(--white);
+    transition: var(--main-transition);
+  }
+
+  .mobile-menu.is-open {
+    transform: translateX(0);
+  }
+
+  .mobile-menu-container {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .mobile-menu-close-btn {
+    position: absolute;
+    top: 24px;
+    right: 24px;
+    width: 24px;
+    height: 24px;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #e7e9fc;
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    padding: 0;
+  }
+
+  .mobile-navigation-list {
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 1.11;
+    letter-spacing: 0.02em;
+    color: #2e2f42;
+    display: flex;
+    flex-direction: column;
+    gap: 40px;
+    margin-bottom: 168px;
+  }
+
+  .nav-link {
+    transition: color var(--main-transition);
+  }
+
+  .nav-link-active {
+    color: var(--dark-light-blue);
+  }
+
+  .nav-link:hover,
+  .nav-link:focus {
+    color: var(--dark-light-blue);
+  }
+
+  .contacts-mobile {
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 1.2;
+    letter-spacing: 0.02em;
+    color: #434455;
+    margin-bottom: 48px;
+  }
+
+  .contacts-list {
+    display: flex;
+    flex-direction: column;
+    gap: 24px;
+  }
+  .contacts-link {
+    transition: color var(--main-transition);
+  }
+
+  .contacts-link:hover,
+  .contacts-link:focus {
+    color: var(--dark-light-blue);
+  }
+
+  .social-icons {
+    display: flex;
+    gap: 40px;
+  }
+
+  .social-icons-list {
+    width: 40px;
+    height: 40px;
+    transition: background-color var(--main-transition);
+  }
+
+  .social-icons-link {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 100%;
+    background-color: var(--blue);
+    border-radius: 50%;
+    transition: background-color var(--main-transition);
+  }
+
+  .social-icons-link:hover,
+  .social-icons-link:focus {
+    background-color: var(--dark-light-blue);
+  }
+
+  .fill-svg {
+    fill: var(--lightest-blue);
+  }
 }
 
-.logo {
-  font-family: 'Raleway', sans-serif;
-  font-weight: 700;
-  text-transform: uppercase;
-  color: var(--blue);
-  font-size: 18px;
-  text-decoration: none;
-  line-height: 1.17;
-  letter-spacing: 0.03em;
+/* tab */
+
+@media screen and (min-width: 768px) {
+  .header-btn {
+    display: none;
+  }
+
+  .mobile-menu {
+    display: none;
+  }
+
+  .navigation-list {
+    display: flex;
+    gap: 40px;
+  }
+
+  .contacts {
+    display: flex;
+    font-size: 12px;
+    line-height: 1.17;
+    letter-spacing: 0.04em;
+  }
+
+  .contacts-list {
+    display: flex;
+    flex-direction: column;
+    gap: 12px;
+  }
+
+  .navigation {
+    display: flex;
+    color: var(--dark-blue);
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    gap: 120px;
+  }
 }
 
-.logo-accent {
-  color: var(--dark-blue);
-}
+/* Descktop */
 
-.header-btn {
-  padding: 0;
-  line-height: 0;
-  stroke: #2f2f37;
-  fill: #2f2f37;
-  transition: stroke var(--main-transition), fill var(--main-transition);
-}
+@media screen and (min-width: 1158px) {
+  .navigation {
+    gap: 76px;
+  }
 
-.header-btn:hover,
-.header-btn:focus {
-  stroke: var(--blue);
-  fill: var(--blue);
-}
-
-.page-header {
-  padding-top: 16px;
-  padding-bottom: 16px;
-  border-bottom: 1px solid #e7e9fc;
-  box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08),
-    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
-}
-
-.mobile-menu-close-btn {
-  position: absolute;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  top: 24px;
-  right: 24px;
-  width: 24px;
-  height: 24px;
-  border: 1px solid rgba(0, 0, 0, 0.1);
-  border-radius: 50%;
-  background-color: transparent;
-  cursor: pointer;
-  padding: 0;
-  transition: background-color var(--main-transition),
-    border var(--main-transition);
-}
-
-.mobile-menu-close-btn:hover,
-.mobile-menu-close-btn:focus .close-modal-btn-icon {
-  fill: var(--white);
-}
-
-.mobile-menu-btn-icon {
-  transition: fill var(--main-transition);
-}
-
-.mobile-menu-close-btn:hover,
-.mobile-menu-close-btn:focus {
-  background-color: var(--dark-light-blue);
-  border: none;
-}
-
-.mobile-menu {
-  position: fixed;
-  padding: 72px 24px 40px 16px;
-  top: 0;
-  left: 0;
-  z-index: 999;
-  width: 100%;
-  height: 100%;
-  transform: translateX(100%);
-  background-color: var(--white);
-  transition: var(--main-transition);
-}
-
-.mobile-menu.is-open {
-  transform: translateX(0);
-}
-
-.mobile-menu-container {
-  display: flex;
-  flex-direction: column;
-}
-
-.mobile-menu-close-btn {
-  position: absolute;
-  top: 24px;
-  right: 24px;
-  width: 24px;
-  height: 24px;
-  border-radius: 50%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background-color: #e7e9fc;
-  border: 1px solid rgba(0, 0, 0, 0.1);
-  padding: 0;
-}
-
-.mobile-navigation-list {
-  font-weight: 700;
-  font-size: 36px;
-  line-height: 1.11;
-  letter-spacing: 0.02em;
-  color: #2e2f42;
-  display: flex;
-  flex-direction: column;
-  gap: 40px;
-  margin-bottom: 168px;
-}
-
-.nav-link {
-  transition: color var(--main-transition);
-}
-
-.nav-link-active {
-  color: var(--dark-light-blue);
-}
-
-.nav-link:hover,
-.nav-link:focus {
-  color: var(--dark-light-blue);
-}
-
-.contacts-mobile {
-  font-weight: 500;
-  font-size: 20px;
-  line-height: 1.2;
-  letter-spacing: 0.02em;
-  color: #434455;
-  margin-bottom: 48px;
-}
-
-.contacts-list {
-  display: flex;
-  flex-direction: column;
-  gap: 24px;
-}
-.contacts-link {
-  transition: color var(--main-transition);
-}
-
-.contacts-link:hover,
-.contacts-link:focus {
-  color: var(--dark-light-blue);
-}
-
-.social-icons {
-  display: flex;
-  gap: 40px;
-}
-
-.social-icons-list {
-  width: 40px;
-  height: 40px;
-  transition: background-color var(--main-transition);
-}
-
-.social-icons-link {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  width: 100%;
-  height: 100%;
-  background-color: var(--blue);
-  border-radius: 50%;
-  transition: background-color var(--main-transition);
-}
-
-.social-icons-link:hover,
-.social-icons-link:focus {
-  background-color: var(--dark-light-blue);
-}
-
-.fill-svg {
-  fill: var(--lightest-blue);
+  .contacts-list {
+    flex-direction: row;
+    gap: 40px;
+    
+  }
 }
