--- a/css/styles.css
+++ b/css/styles.css
@@ -3,6 +3,7 @@
 body {
   font-family: 'Roboto', sans-serif;
   color: var(--lightest-dark-blue);
+  line-height: 1.5;
   background-color: var(--white);
 }
 
@@ -18,11 +19,11 @@ body {
   --main-transition: 2500ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-ul {
+ul,
+ol {
   list-style: none;
   margin-top: 0;
   margin-bottom: 0;
-  margin-left: 0;
   padding-left: 0;
 }
 
@@ -92,10 +93,19 @@ button {
 @media screen and (min-width: 1158px) {
   .container {
     max-width: 1158px;
+    padding-left: 15px;
+    padding-right: 15px;
+    margin: 0 auto;
+  }
+
+  .section {
+    padding-top: 120px;
+    padding-bottom: 120px;
   }
 }
+/* HEADER */
 
-/* header mobile */
+/* mobile */
 
 @media screen {
   .navigation-list,
@@ -131,9 +141,6 @@ button {
   .logo-accent {
     color: var(--dark-blue);
   }
-}
-
-@media screen and (max-width: 767px) {
 
   .header-btn {
     padding: 0;
@@ -349,6 +356,64 @@ button {
   .contacts-list {
     flex-direction: row;
     gap: 40px;
-    
   }
 }
+
+/* Hero Section */
+
+@media screen {
+  .hero-main {
+    background-image: linear-gradient(
+        rgba(46, 47, 66, 0.7),
+        rgba(46, 47, 66, 0.7)
+      ),
+      url(../images/img/web-studio-mobile/hero-img.jpg);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-color: var(--dark-blue);
+    text-align: center;
+    min-width: 320px;
+    margin: 0 auto;
+    padding-top: 72px;
+    padding-bottom: 72px;
+  }
+
+  .title {
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 1.11;
+    letter-spacing: 0.02em;
+    color: var(--white);
+    width: 216px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 48px;
+  }
+
+  .btn-hero {
+    display: block;
+    min-width: 169px;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.04em;
+    background-color: var(--blue);
+    color: var(--white);
+    cursor: pointer;
+    padding: 16px 32px;
+    border-radius: 4px;
+    border: none;
+    margin: 0 auto;
+    box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
+    transition: background-color var(--main-transition);
+  }
+
+  .btn-hero:hover,
+  .btn-hero:focus,
+  .btn-hero:active {
+    background-color: var(--dark-light-blue);
+  }
+}
+
+/* mobile */
