--- a/css/styles.css
+++ b/css/styles.css
@@ -76,7 +76,6 @@ button {
 }
 
 /* Header mobile-firs general*/
-
 .container {
   padding-left: 15px;
   padding-right: 15px;
@@ -94,208 +93,212 @@ button {
   .container {
     max-width: 1158px;
   }
+
+  /* .section {
+    padding-top: 120px;
+    padding-bottom: 120px;
+  } */
 }
+
 /* HEADER */
 
 /* mobile */
 
-@media screen {
-  .navigation-list,
-  .contacts {
-    display: none;
-  }
+.navigation-list,
+.contacts {
+  display: none;
+}
 
-  .page-header {
-    padding-top: 16px;
-    padding-bottom: 16px;
-    border-bottom: 1px solid #e7e9fc;
-    box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08),
-      0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
-  }
+.page-header {
+  border-bottom: 1px solid #e7e9fc;
+  box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
+}
 
-  .header-wraper {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-  }
+.header-wraper {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding-top: 16px;
+  padding-bottom: 16px;
+}
 
-  .logo {
-    font-family: 'Raleway', sans-serif;
-    font-weight: 700;
-    text-transform: uppercase;
-    color: var(--blue);
-    font-size: 18px;
-    text-decoration: none;
-    line-height: 1.17;
-    letter-spacing: 0.03em;
-  }
+.logo {
+  font-family: 'Raleway', sans-serif;
+  font-weight: 700;
+  text-transform: uppercase;
+  color: var(--blue);
+  font-size: 18px;
+  text-decoration: none;
+  line-height: 1.17;
+  letter-spacing: 0.03em;
+}
 
-  .logo-accent {
-    color: var(--dark-blue);
-  }
+.logo-accent {
+  color: var(--dark-blue);
+}
 
-  .header-btn {
-    padding: 0;
-    line-height: 0;
-    stroke: #2f2f37;
-    fill: #2f2f37;
-    transition: stroke var(--main-transition), fill var(--main-transition);
-  }
+.header-btn {
+  padding: 0;
+  line-height: 0;
+  stroke: #2f2f37;
+  fill: #2f2f37;
+  transition: stroke var(--main-transition), fill var(--main-transition);
+}
 
-  .header-btn:hover,
-  .header-btn:focus {
-    stroke: var(--blue);
-    fill: var(--blue);
-  }
+.header-btn:hover,
+.header-btn:focus {
+  stroke: var(--blue);
+  fill: var(--blue);
+}
 
-  .mobile-menu-close-btn {
-    position: absolute;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    top: 24px;
-    right: 24px;
-    width: 24px;
-    height: 24px;
-    border: 1px solid rgba(0, 0, 0, 0.1);
-    border-radius: 50%;
-    background-color: transparent;
-    cursor: pointer;
-    padding: 0;
-    transition: background-color var(--main-transition),
-      border var(--main-transition);
-  }
+.mobile-menu-close-btn {
+  position: absolute;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  top: 24px;
+  right: 24px;
+  width: 24px;
+  height: 24px;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  border-radius: 50%;
+  background-color: transparent;
+  cursor: pointer;
+  padding: 0;
+  transition: background-color var(--main-transition),
+    border var(--main-transition);
+}
 
-  .mobile-menu-close-btn:hover,
-  .mobile-menu-close-btn:focus .close-modal-btn-icon {
-    fill: var(--white);
-  }
+.mobile-menu-close-btn:hover,
+.mobile-menu-close-btn:focus .close-modal-btn-icon {
+  fill: var(--white);
+}
 
-  .mobile-menu-btn-icon {
-    transition: fill var(--main-transition);
-  }
+.mobile-menu-btn-icon {
+  transition: fill var(--main-transition);
+}
 
-  .mobile-menu-close-btn:hover,
-  .mobile-menu-close-btn:focus {
-    background-color: var(--dark-light-blue);
-    border: none;
-  }
+.mobile-menu-close-btn:hover,
+.mobile-menu-close-btn:focus {
+  background-color: var(--dark-light-blue);
+  border: none;
+}
 
-  .mobile-menu {
-    position: fixed;
-    padding: 72px 24px 40px 16px;
-    top: 0;
-    left: 0;
-    z-index: 999;
-    width: 100%;
-    height: 100%;
-    transform: translateX(100%);
-    background-color: var(--white);
-    transition: var(--main-transition);
-  }
+.mobile-menu {
+  position: fixed;
+  padding: 72px 24px 40px 16px;
+  top: 0;
+  left: 0;
+  z-index: 999;
+  width: 100%;
+  height: 100%;
+  transform: translateX(100%);
+  background-color: var(--white);
+  transition: var(--main-transition);
+}
 
-  .mobile-menu.is-open {
-    transform: translateX(0);
-  }
+.mobile-menu.is-open {
+  transform: translateX(0);
+}
 
-  .mobile-menu-container {
-    display: flex;
-    flex-direction: column;
-  }
+.mobile-menu-container {
+  display: flex;
+  flex-direction: column;
+}
 
-  .mobile-menu-close-btn {
-    position: absolute;
-    top: 24px;
-    right: 24px;
-    width: 24px;
-    height: 24px;
-    border-radius: 50%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: #e7e9fc;
-    border: 1px solid rgba(0, 0, 0, 0.1);
-    padding: 0;
-  }
+.mobile-menu-close-btn {
+  position: absolute;
+  top: 24px;
+  right: 24px;
+  width: 24px;
+  height: 24px;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #e7e9fc;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  padding: 0;
+}
 
-  .mobile-navigation-list {
-    font-weight: 700;
-    font-size: 36px;
-    line-height: 1.11;
-    letter-spacing: 0.02em;
-    color: #2e2f42;
-    display: flex;
-    flex-direction: column;
-    gap: 40px;
-    margin-bottom: 168px;
-  }
+.mobile-navigation-list {
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.11;
+  letter-spacing: 0.02em;
+  color: #2e2f42;
+  display: flex;
+  flex-direction: column;
+  gap: 40px;
+  margin-bottom: 168px;
+}
 
-  .nav-link {
-    transition: color var(--main-transition);
-  }
+.nav-link {
+  transition: color var(--main-transition);
+}
 
-  .nav-link-active {
-    color: var(--dark-light-blue);
-  }
+.nav-link-active {
+  color: var(--dark-light-blue);
+}
 
-  .nav-link:hover,
-  .nav-link:focus {
-    color: var(--dark-light-blue);
-  }
+.nav-link:hover,
+.nav-link:focus {
+  color: var(--dark-light-blue);
+}
 
-  .contacts-mobile {
-    font-weight: 500;
-    font-size: 20px;
-    line-height: 1.2;
-    letter-spacing: 0.02em;
-    color: #434455;
-    margin-bottom: 48px;
-  }
+.contacts-mobile {
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 1.2;
+  letter-spacing: 0.02em;
+  color: #434455;
+  margin-bottom: 48px;
+}
 
-  .contacts-list {
-    display: flex;
-    flex-direction: column;
-    gap: 24px;
-  }
-  .contacts-link {
-    transition: color var(--main-transition);
-  }
+.contacts-list {
+  display: flex;
+  flex-direction: column;
+  gap: 24px;
+}
+.contacts-link {
+  transition: color var(--main-transition);
+}
 
-  .contacts-link:hover,
-  .contacts-link:focus {
-    color: var(--dark-light-blue);
-  }
+.contacts-link:hover,
+.contacts-link:focus {
+  color: var(--dark-light-blue);
+}
 
-  .social-icons {
-    display: flex;
-    gap: 40px;
-  }
+.social-icons {
+  display: flex;
+  gap: 40px;
+}
 
-  .social-icons-list {
-    width: 40px;
-    height: 40px;
-    transition: background-color var(--main-transition);
-  }
+.social-icons-list {
+  width: 40px;
+  height: 40px;
+  transition: background-color var(--main-transition);
+}
 
-  .social-icons-link {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 100%;
-    height: 100%;
-    background-color: var(--blue);
-    border-radius: 50%;
-    transition: background-color var(--main-transition);
-  }
+.social-icons-link {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+  background-color: var(--blue);
+  border-radius: 50%;
+  transition: background-color var(--main-transition);
+}
 
-  .social-icons-link:hover,
-  .social-icons-link:focus {
-    background-color: var(--dark-light-blue);
-  }
+.social-icons-link:hover,
+.social-icons-link:focus {
+  background-color: var(--dark-light-blue);
+}
 
-  .fill-svg {
-    fill: var(--lightest-blue);
-  }
+.fill-svg {
+  fill: var(--lightest-blue);
 }
 
 /* tab */
@@ -309,9 +312,25 @@ button {
     display: none;
   }
 
+  .header-wraper {
+    padding-top: 0;
+    padding-bottom: 0;
+  }
+
   .navigation-list {
     display: flex;
     gap: 40px;
+  }
+
+  .navigation {
+    display: flex;
+    color: var(--dark-blue);
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    gap: 120px;
+    align-items: center;
   }
 
   .contacts {
@@ -327,14 +346,9 @@ button {
     gap: 12px;
   }
 
-  .navigation {
-    display: flex;
-    color: var(--dark-blue);
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 1.5;
-    letter-spacing: 0.02em;
-    gap: 120px;
+  .navigation-list .nav-link {
+    display: block;
+    padding: 24px 0;
   }
 }
 
@@ -355,63 +369,61 @@ button {
 
 /* mobile */
 
-@media screen {
-  .section {
-    margin-bottom: 96px;
-  }
+.section {
+  margin-bottom: 96px;
+}
 
-  .hero-main {
-    background-image: linear-gradient(
-        rgba(46, 47, 66, 0.7),
-        rgba(46, 47, 66, 0.7)
-      ),
-      url(../images/img/1web-studio-mobile/hero-img.jpg);
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-color: var(--dark-blue);
-    text-align: center;
-    min-width: 320px;
-    margin-bottom: 96px;
-    padding-top: 72px;
-    padding-bottom: 72px;
-  }
+.hero-main {
+  background-image: linear-gradient(
+      rgba(46, 47, 66, 0.7),
+      rgba(46, 47, 66, 0.7)
+    ),
+    url(../images/img/1web-studio-mobile/hero-img.jpg);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-color: var(--dark-blue);
+  text-align: center;
+  min-width: 320px;
+  margin-bottom: 96px;
+  padding-top: 72px;
+  padding-bottom: 72px;
+}
 
-  .title {
-    font-weight: 700;
-    font-size: 36px;
-    line-height: 1.11;
-    letter-spacing: 0.02em;
-    color: var(--white);
-    width: 216px;
-    margin-left: auto;
-    margin-right: auto;
-    margin-bottom: 48px;
-  }
+.title {
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.11;
+  letter-spacing: 0.02em;
+  color: var(--white);
+  width: 216px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 48px;
+}
 
-  .btn-hero {
-    display: block;
-    min-width: 169px;
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 1.5;
-    letter-spacing: 0.04em;
-    background-color: var(--blue);
-    color: var(--white);
-    cursor: pointer;
-    padding: 16px 32px;
-    border-radius: 4px;
-    border: none;
-    margin: 0 auto;
-    box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
-    transition: background-color var(--main-transition);
-  }
+.btn-hero {
+  display: block;
+  min-width: 169px;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  background-color: var(--blue);
+  color: var(--white);
+  cursor: pointer;
+  padding: 16px 32px;
+  border-radius: 4px;
+  border: none;
+  margin: 0 auto;
+  box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
+  transition: background-color var(--main-transition);
+}
 
-  .btn-hero:hover,
-  .btn-hero:focus,
-  .btn-hero:active {
-    background-color: var(--dark-light-blue);
-  }
+.btn-hero:hover,
+.btn-hero:focus,
+.btn-hero:active {
+  background-color: var(--dark-light-blue);
 }
 
 /* tab */
@@ -466,41 +478,39 @@ button {
 
 /* mobile */
 
-@media screen {
-  .icon-adv {
-    display: none;
-  }
+.icon-adv {
+  display: none;
+}
 
-  .adv-item {
-    display: flex;
-    flex-direction: column;
-    gap: 72px;
-  }
+.adv-item {
+  display: flex;
+  flex-direction: column;
+  gap: 72px;
+}
 
-  .adv-list {
-    flex-basis: calc((100% - 216px) / 4);
-  }
+.adv-list {
+  flex-basis: calc((100% - 216px) / 4);
+}
 
-  .title-third {
-    font-weight: 700;
-    font-size: 36px;
-    line-height: 1.11;
-    letter-spacing: 0.02em;
-    color: var(--dark-blue);
-    text-align: center;
-  }
+.title-third {
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.11;
+  letter-spacing: 0.02em;
+  color: var(--dark-blue);
+  text-align: center;
+}
 
-  .adv-sub {
-    margin-bottom: 8px;
-  }
+.adv-sub {
+  margin-bottom: 8px;
+}
 
-  .paragraph {
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 1.5;
-    letter-spacing: 0.02em;
-    color: var(--lightest-dark-blue);
-  }
+.paragraph {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: var(--lightest-dark-blue);
 }
 
 /* Tab */
@@ -564,95 +574,93 @@ button {
 
 /* mobile */
 
-@media screen {
-  .our-team {
-    background-color: var(--lightest-blue);
-  }
+.our-team {
+  background-color: var(--lightest-blue);
+  padding-top: 96px;
+  padding-bottom: 96px;
+}
 
-  .title-second {
-    font-weight: 700;
-    font-size: 36px;
-    line-height: 1.11;
-    letter-spacing: 0.02em;
-    text-align: center;
-    color: var(--dark-blue);
-    text-transform: capitalize;
-    margin-bottom: 72px;
-    padding-top: 96px;
-  }
+.title-second {
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.11;
+  letter-spacing: 0.02em;
+  text-align: center;
+  color: var(--dark-blue);
+  text-transform: capitalize;
+  margin-bottom: 72px;
+}
 
-  .team-list {
-    display: flex;
-    flex-direction: column;
-    gap: 72px;
-    align-items: center;
-    padding-bottom: 96px;
-  }
+.team-list {
+  display: flex;
+  flex-direction: column;
+  gap: 72px;
+  align-items: center;
+}
 
-  .team-member {
-    flex-basis: calc((100% - 216px) / 4);
-    border-bottom-left-radius: 4px;
-    border-bottom-right-radius: 4px;
-    box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08),
-      0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
-    background: var(--white);
-    background-color: var(--white);
-    text-align: center;
-  }
+.team-member {
+  flex-basis: calc((100% - 216px) / 4);
+  border-bottom-left-radius: 4px;
+  border-bottom-right-radius: 4px;
+  box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08),
+    0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
+  background: var(--white);
+  background-color: var(--white);
+  text-align: center;
+}
 
-  .member-info {
-    padding: 32px 0;
-  }
+.member-info {
+  padding: 32px 0;
+}
 
-  .team-sub {
-    font-weight: 500;
-    font-size: 20px;
-    line-height: 1.2;
-    letter-spacing: 0.02em;
-    text-align: center;
-    color: var(--dark-blue);
-    margin-bottom: 8px;
-  }
+.team-sub {
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 1.2;
+  letter-spacing: 0.02em;
+  text-align: center;
+  color: var(--dark-blue);
+  margin-bottom: 8px;
+}
 
-  .team-paragraph {
-    line-height: 1.5;
-    letter-spacing: 0.02em;
-    text-align: center;
-    color: var(--lightest-dark-blue);
-    margin-bottom: 8px;
-  }
+.team-paragraph {
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  text-align: center;
+  color: var(--lightest-dark-blue);
+  margin-bottom: 8px;
+}
 
-  .social-icons {
-    display: flex;
-    gap: 24px;
-    justify-content: center;
-  }
+.social-icons {
+  display: flex;
+  gap: 24px;
+  justify-content: center;
+}
 
-  .social-icons-list {
-    width: 40px;
-    height: 40px;
-    transition: background-color var(--main-transition);
-  }
+.social-icons-list {
+  width: 40px;
+  height: 40px;
+  transition: background-color var(--main-transition);
+}
 
-  .social-icons-link {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 100%;
-    height: 100%;
-    background-color: var(--blue);
-    border-radius: 50%;
-    transition: background-color var(--main-transition);
-  }
+.social-icons-link {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+  background-color: var(--blue);
+  border-radius: 50%;
+  transition: background-color var(--main-transition);
+}
 
-  .social-icons-link:hover,
-  .social-icons-link:focus {
-    background-color: var(--dark-light-blue);
-  }
+.social-icons-link:hover,
+.social-icons-link:focus {
+  background-color: var(--dark-light-blue);
+}
 
-  .fill-svg {
-    fill: var(--lightest-blue);
-  }
+.fill-svg {
+  fill: var(--lightest-blue);
 }
 
 /* tab */
@@ -682,5 +690,112 @@ button {
 
   .team-member {
     flex-basis: calc((100% - 72px) / 4);
+  }
+}
+
+/* Our Portfolio */
+
+/* mobile */
+
+.our-potfolio .section {
+  padding-top: 0;
+}
+.op-list {
+  display: flex;
+  flex-direction: column;
+  gap: 48px;
+}
+
+.item {
+  flex-basis: calc((100% - 240px) / 6);
+  transition: box-shadow var(--main-transition);
+}
+
+.op-card {
+  border-bottom: 1px solid #e7e9fc;
+  border-left: 1px solid #e7e9fc;
+  border-right: 1px solid #e7e9fc;
+  padding: 32px 16px;
+}
+
+.item:hover {
+  box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08),
+    0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
+  background: var(--white);
+  cursor: pointer;
+}
+
+.title-op {
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 1.2;
+  letter-spacing: 0.02em;
+  color: var(--dark-blue) #2e2f42;
+  margin-bottom: 8px;
+}
+
+.paragraph-op {
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #434455;
+}
+
+.item:hover .paragraph-hiden {
+  transform: translateY(0%);
+}
+
+.overflow-paragraph {
+  position: relative;
+  overflow: hidden;
+}
+
+.paragraph-hiden {
+  position: absolute;
+  top: 0;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: var(--lightest-blue);
+  padding: 40px 32px;
+  background-color: var(--blue);
+  height: 100%;
+  width: 100%;
+  transform: translateY(100%);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+@media screen and (min-width: 768px) {
+  .portfolio-img {
+    width: 356px;
+    height: 300px;
+  }
+
+  .op-list {
+    flex-direction: row;
+    flex-wrap: wrap;
+    column-gap: 24px;
+    row-gap: 72px;
+  }
+
+  .item {
+    flex-basis: calc((100% - 24px) / 2);
+  }
+}
+
+/* desktop */
+
+@media screen and (min-width: 1158px) {
+
+  .portfolio-img {
+    width: 360px;
+    height: 300px;
+  }
+
+  .op-list {
+    row-gap: 48px;
+  }
+
+  .item {
+    flex-basis: calc((100% - 48px) / 3);
   }
 }
