--- a/css/styles.css
+++ b/css/styles.css
@@ -16,7 +16,7 @@ body {
   --lightest-dark-blue: #434455;
   --middle-grey: #8e8f99;
   --emerald: #31d0aa;
-  --main-transition: 2500ms cubic-bezier(0.4, 0, 0.2, 1);
+  --main-transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 ul,
@@ -275,7 +275,7 @@ address {
   color: var(--dark-light-blue);
 }
 
-.social-icons {
+.social-icons-mobile {
   display: flex;
   gap: 40px;
 }
@@ -338,6 +338,28 @@ address {
     align-items: center;
   }
 
+  .nav-link {
+    display: block;
+    position: relative;
+    padding: 24px 0;
+    transition: color var(--main-transition);
+  }
+
+  .nav-link-active {
+    color: var(--dark-light-blue);
+  }
+
+  .nav-link-active::after {
+    content: '';
+    position: absolute;
+    bottom: -1px;
+    left: 0;
+    width: 100%;
+    height: 4px;
+    background-color: var(--dark-light-blue);
+    border-radius: 2px;
+  }
+
   .contacts {
     display: flex;
     font-size: 12px;
@@ -362,6 +384,14 @@ address {
 @media screen and (min-width: 1158px) {
   .navigation {
     gap: 76px;
+  }
+
+  .contacts-list .contacts-link {
+    font-size: 12px;
+    line-height: 1.17;
+    letter-spacing: 0.04em;
+    color: var(--lightest-dark-blue);
+    transition: color var(--main-transition);
   }
 
   .contacts-list {
@@ -832,5 +862,450 @@ address {
 
   .item {
     flex-basis: calc((100% - 48px) / 3);
+  }
+}
+
+/* Footer */
+
+/* mobile */
+
+@media screen and (max-width: 767px) {
+  .footer-content {
+    display: flex;
+    flex-direction: column;
+    gap: 72px;
+  }
+}
+
+.footer {
+  padding: 96px 0;
+  background-color: var(--dark-blue);
+}
+
+.footer .logo-footer {
+  display: block;
+  margin-bottom: 16px;
+  text-align: center;
+}
+
+.logo-footer {
+  display: inline-block;
+  margin-bottom: 16px;
+  font-family: 'Raleway', sans-serif;
+  font-weight: 700;
+  text-transform: uppercase;
+  color: var(--blue);
+  font-size: 18px;
+  text-decoration: none;
+  line-height: 1.17;
+  letter-spacing: 0.03em;
+}
+
+.logo-footer .logo-accent {
+  font-family: 'Raleway', sans-serif;
+  font-weight: 700;
+  text-transform: uppercase;
+  color: var(--lightest-blue);
+  font-size: 18px;
+  text-decoration: none;
+  line-height: 1.7;
+  letter-spacing: 0.03em;
+}
+.footer-paragraph {
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: var(--lightest-blue);
+  max-width: 264px;
+}
+
+.footer-social {
+  margin: 0 auto;
+}
+
+.footer-paragraph-social {
+  margin-bottom: 16px;
+  font-weight: 500;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: var(--white);
+  text-align: center;
+}
+
+.social-icons-footer {
+  display: flex;
+  gap: 16px;
+  width: 208px;
+}
+
+.emer:hover,
+.emer:focus {
+  background-color: var(--emerald);
+}
+
+.paragraph-subscribe {
+  font-weight: 500;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: var(--white);
+  margin-bottom: 16px;
+  text-align: center;
+}
+
+.footer-form {
+  display: flex;
+  flex-direction: column;
+  gap: 24px;
+  align-items: center;
+}
+
+.footer-input {
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  border-radius: 4px;
+  width: 288px;
+  height: 40px;
+  outline: transparent;
+  background-color: transparent;
+  color: var(--white);
+  padding: 0 16px;
+  font-size: 12px;
+  line-height: 2;
+  letter-spacing: 0.04em;
+  transition: box-shadow var(--main-transition);
+}
+
+.footer-input::placeholder {
+  color: rgba(255, 255, 255, 0.6);
+}
+
+.footer-input:hover,
+.footer-input:active {
+  box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
+}
+
+.footer-btn {
+  min-width: 165px;
+  padding: 8px;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  gap: 16px;
+  background: #4d5ae5;
+  border-radius: 4px;
+  border: none;
+  font-weight: 500;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  color: #fff;
+  transition: background-color var(--main-transition);
+}
+
+/* Tab */
+
+@media screen and (min-width: 768px) {
+  .footer .logo-footer {
+    text-align: left;
+  }
+
+  .footer-social {
+    margin-inline: 0;
+  }
+
+  .footer-paragraph-social {
+    text-align: left;
+  }
+
+  .paragraph-subscribe {
+    text-align: left;
+  }
+
+  .footer-form {
+    flex-direction: row;
+  }
+
+  .footer-input {
+    width: 264px;
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1157px) {
+  .footer-content {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    column-gap: 24px;
+    row-gap: 72px;
+    padding-left: 92px;
+  }
+}
+
+/* desktop */
+
+@media screen and (min-width: 1158px) {
+  .footer {
+    padding-top: 100px;
+    padding-bottom: 100px;
+  }
+
+  .footer-content {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    padding-left: 15px;
+    align-items: baseline;
+  }
+
+  .text-footer {
+    margin-right: 120px;
+  }
+
+  .footer-social {
+    margin-right: 80px;
+  }
+
+  .footer-input::placeholder {
+    color: var(--white);
+  }
+
+  .footer-input {
+    border: 1px solid #fff;
+  }
+}
+
+/* Modal */
+
+.backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(46, 47, 66, 0.4);
+  opacity: 0;
+  pointer-events: none;
+  visibility: hidden;
+  transition: opacity var(--main-transition), visibility var(--main-transition);
+}
+
+.backdrop.is-open {
+  opacity: 1;
+  pointer-events: auto;
+  visibility: visible;
+}
+
+.modal {
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 288px;
+  min-height: 623px;
+  position: absolute;
+  padding: 72px 16px 24px;
+  box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.14), 0 1px 3px 0 rgba(0, 0, 0, 0.12),
+    0 2px 1px 0 rgba(0, 0, 0, 0.2);
+  background: #fcfcfc;
+  border-radius: 4px;
+  transition: transform var(--main-transition);
+}
+
+.close-modal-btn {
+  position: absolute;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  top: 24px;
+  right: 24px;
+  width: 24px;
+  height: 24px;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  border-radius: 50%;
+  background-color: #e7e9fc;
+  cursor: pointer;
+  padding: 0;
+  transition: background-color var(--main-transition),
+    border var(--main-transition);
+}
+
+.close-modal-btn:hover,
+.close-modal-btn:focus .close-modal-btn-icon {
+  fill: var(--white);
+}
+
+.close-modal-btn-icon {
+  transition: fill var(--main-transition);
+}
+
+.close-modal-btn:hover,
+.close-modal-btn:focus {
+  background-color: var(--dark-light-blue);
+  border: none;
+}
+
+.modal-title {
+  margin-bottom: 16px;
+  font-weight: 500;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  text-align: center;
+  color: var(--dark-blue);
+}
+
+.modal-input-contacts-wrapper {
+  margin-bottom: 8px;
+}
+
+.input-contacts-label {
+  display: block;
+  margin-bottom: 4px;
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.04em;
+  color: var(--middle-grey);
+}
+
+.input-contacts {
+  width: 100%;
+  border: 1px solid rgba(46, 47, 66, 0.4);
+  border-radius: 4px;
+  height: 40px;
+  outline: transparent;
+  padding-left: 34px;
+  background-color: transparent;
+  transition: border-color var(--main-transition);
+}
+
+.input-contacts:focus {
+  border: 1px solid var(--blue);
+}
+
+.input-contacts:focus + .input-contacts-icon {
+  fill: var(--blue);
+}
+
+.input-contacts-icon-wraper {
+  position: relative;
+}
+
+.input-contacts-icon {
+  position: absolute;
+  top: 50%;
+  left: 16px;
+  transform: translateY(-50%);
+  fill: var(--dark-blue);
+  transition: fill var(--main-transition);
+}
+
+.modal-label-textarea-wrapper {
+  margin-bottom: 16px;
+}
+
+.modal-textarea {
+  display: block;
+  width: 100%;
+  height: 120px;
+  border: 1px solid rgba(46, 47, 66, 0.4);
+  border-radius: 4px;
+  padding: 8px 16px;
+  outline: none;
+  resize: none;
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.04em;
+  color: rgba(46, 47, 66, 0.4);
+  background-color: transparent;
+  outline: transparent;
+  transition: border-color var(--main-transition);
+}
+
+.modal-textarea:focus {
+  border: 1px solid var(--blue);
+}
+
+.checkbox-privacy-policy-wrapper {
+  margin-bottom: 24px;
+}
+
+.checkbox-privacy-policy-label {
+  display: flex;
+  align-items: center;
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.04em;
+  color: var(--middle-grey);
+}
+
+.modal-custom-checkbox {
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  width: 16px;
+  height: 16px;
+  fill: transparent;
+  margin-right: 8px;
+  border-radius: 2px;
+  border: 1px solid rgba(46, 47, 66, 0.4);
+  transition: background-color var(--main-transition),
+    border var(--main-transition), fill var(--main-transition);
+}
+
+.modal-checkmark {
+  fill: var(--lightest-blue);
+  opacity: 0;
+}
+
+.modal-checkbox:checked + .checkbox-privacy-policy-label .modal-checkmark {
+  opacity: 1;
+}
+
+.modal-checkbox:checked
+  + .checkbox-privacy-policy-label
+  .modal-custom-checkbox {
+  background-color: var(--dark-light-blue);
+  border: none;
+  fill: var(--lightest-blue);
+}
+
+.policy-terms {
+  text-decoration: underline;
+  color: var(--blue);
+}
+
+.modal-btn {
+  display: block;
+  min-width: 169px;
+  padding: 16px 32px;
+  font-weight: 500;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  text-align: center;
+  color: var(--white);
+  border-radius: 4px;
+  box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
+  background-color: var(--blue);
+  border: none;
+  cursor: pointer;
+  transition: background-color 250ms var(--main-transition);
+  margin: 0 auto;
+}
+
+.modal-btn:hover,
+.modal-btn:focus {
+  background-color: var(--dark-light-blue);
+}
+
+/* tab */
+
+@media screen and (min-width: 768px) {
+  .modal {
+    width: 408px;
+    padding: 72px 24px 24px;
+  }
+}
+
+/* desktop */
+
+@media screen and (min-widyh: 1158px) {
+  .input-contacts {
+    padding-left: 38px;
   }
 }
